[commit info]commit for a good version

--- a/application/net_camera/Makefile
+++ b/application/net_camera/Makefile
@@ -12,7 +12,8 @@ LIB = $(HOME)/application/lib/src/IrayCamera.cpp \
 		$(HOME)/application/lib/src/NetReceiver.cpp \
 		$(HOME)/application/lib/src/IrayImageWriter.cpp \
 		$(HOME)/application/lib/src/IrayFrameRate.cpp \
-
+		$(HOME)/application/lib/src/IrayFbDisplay.cpp \
+		
 SRC = net-camera.cpp
 
 #CFLAGS = -O3 -Wall -std=c99
