[commit info]commit befor team work

--- a/application/test/fb/Makefile
+++ b/application/test/fb/Makefile
@@ -2,12 +2,16 @@ CC = arm-linux-gnueabihf-g++
 
 TAG = frame-buffer-test
 
-HOME = ../..
+HOME = ../../..
 
-SRC = FrameBufferDev.cpp \
-		Bt656Merge.cpp \
-		IrayRgbImage.cpp \
-		main.cpp \
+INC = -I $(HOME)/application/lib/include/
+
+LIB = $(HOME)/application/lib/src/FrameBufferDev.cpp \
+	$(HOME)/application/lib/src/IrayRgbImage.cpp \
+	$(HOME)/application/lib/src/Bt656Merge.cpp \
+	$(HOME)/application/lib/src/IrayCameraData.cpp \
+		
+SRC = main.cpp
 		
 CFLAGS = -O3 -Wall
 CFLAGS += -Wl,-rpath-link,../../../linux-devkit/sysroots/cortexa15hf-neon-linux-gnueabi/usr/lib \
@@ -18,7 +22,7 @@ CFLAGS += -Wl,-rpath-link,../../../linux-devkit/sysroots/cortexa15hf-neon-linux-
 CFLAGS += -lpthread -lasound -lrt
 
 all:
-	@$(CC) $(SRC) -o $(TAG) $(CFLAGS)
+	@$(CC) $(INC) $(LIB) $(SRC) -o $(TAG) $(CFLAGS)
 
 clean:
 	rm -rf $(TAG) *.o
