--- a/app/src/Makefile.local
+++ b/app/src/Makefile.local
@@ -1,12 +1,18 @@
-CC = arm-linux-gnueabihf-g++
+CC = g++
 
 TAG = iray-camera
 
-HOME = .
+HOME = ..
 
-INC = -I $(HOME)/include/
+INC = -I $(HOME)/include/ \
+		-I $(HOME)/include/product/IrayCamera001/
 
-LIB = $(HOME)/src/*.cpp
+LIB = $(HOME)/src/common/*.cpp \
+		$(HOME)/src/display/*.cpp \
+		$(HOME)/src/image/*.cpp \
+		$(HOME)/src/net/*.cpp \
+		$(HOME)/src/product/IrayCamera001/*.cpp \
+		$(HOME)/src/services/*.cpp
 		
 SRC = iray-camera.cpp
 
