[commit info]commit for vpe

--- a/app/test/vpe/Makefile
+++ b/app/test/vpe/Makefile
@@ -8,8 +8,10 @@ INC = -I $(HOME)/include/
 INC += -I $(HOME)/include/product/IrayCamera001/
 
 LIB = $(HOME)/src/common/*.cpp \
-		$(HOME)/src/product/IrayCamera001/*.cpp
-		
+		$(HOME)/src/product/IrayCamera001/*.cpp \
+		$(HOME)/src/image/*.cpp \
+		$(HOME)/src/services/*.cpp \
+
 SRC = TestVpe.cpp
 
 CFLAGS = -O3 -Wall
